src/objects/Site__c.object
<CustomObject>
    <fields>
        <fullName>ACRIN_6693_MRS_Participant__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ACRIN 6693 MRS Participant?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Activation_Date__c</fullName>
        <label>Activation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <description>this is contains site address</description>
        <label>Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Institute__c</fullName>
        <label>Institution</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Sites</relationshipLabel>
        <relationshipName>Sites</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>IsTestSite__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is for test site only.</description>
        <label>IsTestSite</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pg_Institution_Id__c</fullName>
        <label>Pg_Institution_Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Short_Name__c</fullName>
        <label>Short Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Site</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>IsTestSite__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Site Name</label>
        <type>Text</type>
    </nameField>
    <namedFilters>
        <fullName>Contact_00NE0000002twEcMAI</fullName>
        <active>true</active>
        <field>Contact.Site__c</field>
        <filterItems>
            <field>Site__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Site</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Contact_Site</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01IE0000000SUqfMAG_00NE0000003pIibMAE</fullName>
        <active>true</active>
        <field>Registration__c.Lab__c</field>
        <filterItems>
            <field>Site__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Lab</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Registration_Lab</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01Ic00000000FFSEA2_00Nc0000000GzwEEAS</fullName>
        <active>true</active>
        <field>Procedure_Specimen_Detail__c.Lab__c</field>
        <filterItems>
            <field>Site__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Lab</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Procedure Specimen Detail_Performing Lab</name>
    </namedFilters>
    <pluralLabel>Sites</pluralLabel>
    <recordTypes>
        <fullName>Lab</fullName>
        <active>true</active>
        <label>Lab</label>
    </recordTypes>
    <recordTypes>
        <fullName>Site</fullName>
        <active>true</active>
        <label>Site</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>